--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
           <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>  
     </div>
-
     <!--Toggle Button-->
     <button class="navbar__toggle-btn">
     <i class="fa-solid fa-bars"></i>
@@ -158,40 +157,43 @@
     <h3>projects</h3>
     </div>
     <div class="work__categories">
-        <button class="category__btn active">All<span class="category__count">4</span></button>
-        <button class="category__btn">web<span class="category__count">2</span></button>
-        <button class="category__btn">aduino<span class="category__count">1</span></button>
-        <button class="category__btn">circuit<span class="category__count">1</span></button>
+        <button class="category__btn active" data-filter="*">All<span class="category__count">4</span></button>
+        <button class="category__btn" data-filter="web">web<span class="category__count">2</span></button>
+        <button class="category__btn" data-filter="aduino">aduino<span class="category__count">1</span></button>
+        <button class="category__btn" data-filter="circuit">circuit<span class="category__count">1</span></button>
     </div>
-    <div class="work__projects">
-    <div class="project">   
+    <div class="work__projects">   
+    <a href = " " class="project" data-type="aduino">       
     <img src="imgs/bicycle.jpg" alt="aduino" class="project__image">
      <div class="project__description">
          <h3>heat-bicycle</h3>
          <span>it is a bicycle which get heat when you riding a bike</span>
      </div>
-     </div>
-     <div class="project">   
-     <img src="imgs/web1.jpg" alt="website" class="project__image">
-     <div class="project__description">
+    </a>
+    <a href = " " class="project" data-type="web">   
+    <img src="imgs/web1.jpg" alt="website" class="project__image">
+    <div class="project__description">
          <h3>website</h3>
          <span>it is a website that dream-catching</span>
-     </div>
-     </div>
-     <div class="project">   
-     <img src="imgs/web2.jpg" alt="website" class="project__image">
-     <div class="project__description">
+    </div>
+    </a>
+
+   
+    <a href = " " class="project" data-type="web"> 
+    <img src="imgs/web2.jpg" alt="website" class="project__image">
+    <div class="project__description">
          <h3>webstie</h3>
          <span>it is a website that place-visiting</span>
-     </div>
-     </div>
-     <div class="project">   
-     <img src="imgs/circuit2.jpg" alt="circuit" class="project__image">
-     <div class="project__description">
+    </div>
+    </a>
+    <a href = " " class="project" data-type="circuit">    
+    <img src="imgs/circuit2.jpg" alt="circuit" class="project__image">
+    <div class="project__description">
          <h3>circuit</h3>
          <span>it is a record of my circuit study</span>
-     </div>
-     </div>  
+    </div>
+    </a>
+       
     </div>
     </section>
 
@@ -228,5 +230,9 @@
         </a>
         <p class="contact__number"><i class="fa-solid fa-phone"></i>Tel-010-9248-0578</p>
     </section>
+    <!-- Arrow up-->
+    <button class="arrow-up">
+    <i class="fa-solid fa-arrow-up"></i>
+    </button>
 </body>
 </html>
