--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav id="navbar">
     <div class="navbar__logo">
     <i class="fa-solid fa-dumbbell"></i>
-    <a href="#">Terry</a>    
+    <a href="#" clas="navbar__name">Terry</a>    
     </div>
-    <div class="navbar__menu">
+    <div class="navbar__menus">
       <ul class="navbar__menu">
           <li class="navbar__menu__item" data-link="#home">Home</li>
           <li class="navbar__menu__item" data-link="#about">About</li>
